[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
bevy_ptr = "0.9.1"
bytemuck = "1.13.0"
clap = "4.1.6"
console_error_panic_hook = "0.1.6"
daicon = "0.2.0"
heck = "0.4.1"
js-sys = "0.3.61"
raw-window-handle = "0.5.0"
thiserror = "1.0.38"
thunderdome = "0.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-wasm = "0.2.1"
uuid = "1.3.0"
web-sys = "0.3.61"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.34"
wgpu = "0.15.1"
wrapmuck = "0.2.0"
dacti-index = { path = "../dacti/crates/dacti-index" }
dacti-viewer = { path = "./crates/dacti-viewer" }
ptero-daicon = { path = "./crates/ptero-daicon" }
ptero-pack = { path = "./crates/ptero-pack" }
stewart = { path = "./crates/stewart" }
