[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
console_error_panic_hook = "0.1.6"
daicon = "0.11.0"
daicon-types = "0.1.0"
daicon-web = "0.1.0"
js-sys = "0.3.61"
raw-window-handle = "0.5.0"
stewart = "0.4.0"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
uuid = "1.3.0"
web-sys = "0.3.61"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.34"
wgpu = "0.16.1"
dacti-viewer = { path = "./crates/dacti-viewer" }
