[package]
name = "dacti-viewer-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
console_error_panic_hook.workspace = true
js-sys.workspace = true
ptero-daicon.workspace = true
ptero-file.workspace = true
ptero-js.workspace = true
raw-window-handle.workspace = true
stewart.workspace = true
stewart-utils.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wgpu.workspace = true
dacti-viewer.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl"] }
# TODO: wasm32-wasi will provide random
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
workspace = true
features = [
    "DomStringMap",
    "HtmlElement",
    "HtmlCanvasElement",
    "Window",
]
