[package]
name = "dacti-viewer-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
console_error_panic_hook.workspace = true
daicon.workspace = true
daicon-types.workspace = true
daicon-web.workspace = true
js-sys.workspace = true
raw-window-handle.workspace = true
stewart.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wgpu.workspace = true
dacti-viewer.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl"] }

[dependencies.web-sys]
workspace = true
features = [
    "DomStringMap",
    "HtmlElement",
    "HtmlCanvasElement",
    "Window",
]
