[package]
name = "ptero-pack-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ptero-pack"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
stewart.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
ptero-daicon.workspace = true
ptero-pack.workspace = true
