[package]
name = "stewart"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thunderdome.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest = "0.17.0"
tracing-subscriber.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
